--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.13)
 
 project(user)
 enable_language(ASM)
@@ -12,7 +12,7 @@ else()
 endif()
 
 set(ASM_DIR asm)
-set(BIN_DIR target)
+set(BIN_DIR bin)
 
 # Toolchain
 set(PREFIX ${ARCH}-linux-musl-)
@@ -32,9 +32,7 @@ set(CMAKE_OBJDUMP           ${PREFIX}objdump)
 set(CMAKE_RANLIB            ${PREFIX}ranlib)
 set(CMAKE_C_FLAGS           "${CMAKE_C_FLAGS} -fno-builtin -nostdinc -fno-stack-protector -ggdb -Wall")
 set(CMAKE_ASM_FLAGS         ${CMAKE_C_FLAGS})
-set(CMAKE_C_LINK_FLAGS      "${LINK_FLAGS} -nostdlib")  # override default value to get rid of '-Wl,-search_paths_first -Wl,-headerpad_max_install_names'
-set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)                  # override default value to get rid of '-rdynamic' on Linux
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_C_LINK_FLAGS} -nostdlib -N -T ${CMAKE_CURRENT_SOURCE_DIR}/${ARCH_DIR}/user.ld")
+set(CMAKE_C_LINK_FLAGS      "${LINK_FLAGS} -nostdlib -T ${CMAKE_CURRENT_SOURCE_DIR}/${ARCH_DIR}/user.ld")
 
 # Library
 aux_source_directory(lib LIBS)
@@ -44,12 +42,32 @@ include_directories(include/)
 target_include_directories(ulib PRIVATE ${ARCH_DIR})
 
 # Execuatble
+set(ENTRY "0x1000")
 aux_source_directory(src SRCS)
 set(EXECUTABLE_OUTPUT_PATH ${ARCH})
 foreach(PATH ${SRCS})
     get_filename_component(NAME ${PATH} NAME_WE)
+
+    if ("${CHAPTER}" STREQUAL 2)
+        math(EXPR ENTRY "0x80400000" OUTPUT_FORMAT HEXADECIMAL)
+    endif ()
+
+    if ("${CHAPTER}" MATCHES 3_*)
+        if(${NAME} STREQUAL ch4_mmap0)
+            break ()
+        elseif (${NAME} STREQUAL ch2_exit OR ${NAME} STREQUAL ch3_1_yield0 OR ${NAME} STREQUAL ch3_2_stride0)
+            math(EXPR ENTRY "0x80400000" OUTPUT_FORMAT HEXADECIMAL)
+        elseif (${NAME} STREQUAL ch3t_deadloop)
+            math(EXPR ENTRY "0x80500000" OUTPUT_FORMAT HEXADECIMAL)
+        else ()
+            math(EXPR ENTRY "${ENTRY} + 0x20000" OUTPUT_FORMAT HEXADECIMAL)
+        endif ()
+    endif ()
+
     add_executable(${NAME} ${PATH})
     target_link_libraries(${NAME} ulib)
+    target_link_options(${NAME} PRIVATE -Ttext ${ENTRY})
+
     add_custom_command(
             TARGET ${NAME}
             POST_BUILD
