--- a/user/Makefile
+++ b/user/Makefile
@@ -13,16 +13,20 @@ endif
 OBJCOPY := $(ARCH)-linux-musl-objcopy
 OBJDUMP := $(ARCH)-linux-musl-objdump
 CP := cp
+PY := python3
 
 elf:
 	@mkdir -p build
 	@cd build && cmake $(cmake_build_args) .. && make -j
 
+ch3-elf:
+
+
 bin: elf
 	@mkdir -p asm
 	@$(CP) build/asm/* asm
 	@mkdir -p $(out_dir)
-	@$(CP) build/target/* target
+	@$(CP) build/bin/* target/
 
 clean:
 	@rm -rf build target asm
