--- a/user/lib/arch/riscv/syscall_ids.h.in
+++ b/user/lib/arch/riscv/syscall_ids.h.in
@@ -294,5 +294,7 @@
 #define __NR_openat2 437
 #define __NR_pidfd_getfd 438
 #define __NR_faccessat2 439
-
 #define __NR_riscv_flush_icache 244 + 15
+#define __NR_spawn 400
+#define __NR_mailread 401
+#define __NR_mailwrite 402
